fixed nav arrow overlap bug.

--- a/src/client/core/app.scss
+++ b/src/client/core/app.scss
@@ -17,7 +17,3 @@ body {
   display: block !important;
   font-family: 'Open Sans Regular' !important;
 }
-html,
-body {
-  overflow-x: hidden;
-}
