--- a/src/client/core/modules/Header/header.scss
+++ b/src/client/core/modules/Header/header.scss
@@ -12,7 +12,7 @@
     position: fixed;
     width: 100%;
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 2;
     &__brand-icon {
       text-decoration: none;
     }
