--- a/src/client/core/styles/config/_colors.scss
+++ b/src/client/core/styles/config/_colors.scss
@@ -1,6 +1,7 @@
 // Semantic Color variables
 $black: #000;
 $white: #fff;
+$white-ghost: #ebedf2;
 $grey: #c2c2c2;
 $error-red: #e00;
 $alert-red: #ef0703;
@@ -10,6 +11,7 @@ $warning-yellow: #ffcd19;
 $dark-grey: #555555;
 $medium-grey: #999999;
 $medium-grey2: #cacaca;
+$light-grey: #f3f3f3;
 $light-grey: #f3f3f3;
 
 $gradient-blue-red: linear-gradient(#001fff, #ff0020);
